dropshot/tests/fail/bad_trait_only10.stderr
error: API trait `MyApi` must not be marked as `unsafe`
 --> tests/fail/bad_trait_only10.rs:8:1
  |
8 | unsafe trait MyApi {
  | ^^^^^^

error[E0425]: cannot find function `api_description` in module `my_api_mod`
  --> tests/fail/bad_trait_only10.rs:23:17
   |
23 |     my_api_mod::api_description::<MyImpl>();
   |                 ^^^^^^^^^^^^^^^ not found in `my_api_mod`

error[E0425]: cannot find function `stub_api_description` in module `my_api_mod`
  --> tests/fail/bad_trait_only10.rs:24:17
   |
24 |     my_api_mod::stub_api_description();
   |                 ^^^^^^^^^^^^^^^^^^^^ not found in `my_api_mod`
